# ot-app

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.staging  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: admin.py  apps.py  authentication.py  consumers.py  cookies.py  exceptions.py  handlers.py  health.py  managers.py  middleware.py  models.py  pagination.py  permissions.py  routing.py  serializers.py  serializers_access.py  signals.py  tasks.py  tests.py  urls.py  versioning.py  views.py
backend/api/migrations/: 0001_initial.py  0002_overtimebreak.py  0003_externaluser_usersession.py  0004_department_and_dept_links.py  0005_alter_employee_options_and_more.py  0006_overtimeregulation.py  0007_calendarevent_all_day_calendarevent_color_and_more.py  0008_overtimeregulationdocument.py  0009_alter_calendarevent_created_by.py  (+51 more)
backend/backend/: __init__.py  asgi.py  celery.py  settings.py  settings_test.py  urls.py  views.py
backend/docs/: API_GUIDE.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION_DETAILS.md  QUICK_STAGING_GUIDE.md  STAGING_DEPLOYMENT.md  TOKEN_VERIFICATION.md
backend/generate_data/: DBcreation.txt  employees.json  generate_employee.py  generate_project.py  projects.json
backend/nginx/: Dockerfile  nginx.conf
backend/scripts/: backup_db.sh  deploy-staging.sh  deploy-static-files.sh  deploy.sh  diagnose-bugs.sh  restore_db.sh  run_migrations.sh  update-code.sh  update-env.sh
(+284 files in other folders)
